--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ docs/site/
 # committed for packages, but should be committed for applications that require a static
 # environment.
 Manifest.toml
+Q1v1/.DS_Store
