--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,10 @@
 [deps]
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+MeshCat = "283c5d60-a78f-5afe-a0af-af636b173e11"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
